@@ -79,13 +79,13 @@ dependencies {
     testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j2-impl', version: '2.19.0'
 
     testImplementation group: 'org.yaml', name: 'snakeyaml', version: '1.27'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.10.0'
-    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.10.0'
-    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.10.0'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.9.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.12.0'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '5.2.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.10.2'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
 
     testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
 }
@@ -94,6 +94,11 @@ test {
     useJUnitPlatform()
     filter {
         excludeTestsMatching("communicator.modbus.integrationtest.*")
+    }
+    // this workaround is required to run some tests under JDKs > 17.
+    // otherwise EqualsBuilder.reflectionEquals(...) may fail due to inaccessible fields, e.g. serialVersionUID.
+    doFirst {
+        jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
     }
 }
 
